force-app/main/default/objects/Meter_Reading__c/Meter_Reading__c.object-meta.xml
<CustomObject>
    <description>Used to log each reading entry, calculation, photo link, and billing status.</description>
    <label>Meter Reading</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Reading Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Readings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>