force-app/main/default/objects/Meter_Reading__c/fields/Current_Reading__c.field-meta.xml
<CustomField>
    <fullName>Current_Reading__c</fullName>
    <description>Current reading taken by owner</description>
    <label>Current Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>