force-app/main/default/objects/Meter_Reading__c/fields/Image_Public_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Public_Id__c</fullName>
    <description>Optional Cloudinary ID</description>
    <label>Image Public ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>