force-app/main/default/objects/Meter_Reading__c/fields/Meter_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Meter_Image_URL__c</fullName>
    <description>Cloudinary photo URL</description>
    <label>Meter Image URL</label>
    <type>Url</type>
</CustomField>