force-app/main/default/objects/Meter_Reading__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional remarks</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>