force-app/main/default/objects/Meter_Reading__c/fields/Previous_Reading__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Previous recorded reading</description>
    <label>Previous Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>