force-app/main/default/objects/Meter_Reading__c/fields/Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Unit__c</fullName>
    <description>Dynamic rate applied</description>
    <label>Rate Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>