force-app/main/default/objects/Meter_Reading__c/fields/Reading_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reading_DateTime__c</fullName>
    <description>Entry date &amp; time</description>
    <label>Reading Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>