force-app/main/default/objects/Meter_Reading__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>Links reading to the tenant</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Meter Readings</relationshipLabel>
    <relationshipName>Meter_Readings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>