force-app/main/default/objects/Meter_Reading__c/fields/Units_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Units_Consumed__c</fullName>
    <description>Current_Reading__c - Previous_Reading__c</description>
    <label>Units Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>